# gedit-rust

./: .gitignore  Cargo.toml  Gir.toml
example/: Cargo.toml
example/src/: lib.rs
gedit-sys/: Cargo.toml  Gir.toml
gedit-sys/src/: lib.rs
gedit-sys/tests/: abi.rs  constant.c  layout.c
src/auto/: app.rs  app_activatable.rs  document.rs  encodings_combo_box.rs  enums.rs  flags.rs  menu_extension.rs  message.rs  message_bus.rs  mod.rs  progress_info_bar.rs  statusbar.rs  tab.rs  versions.txt  view.rs  view_activatable.rs  window.rs  window_activatable.rs
