[package]
name = "gedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
bitflags = "1.3.2"

[dependencies.ffi]
package = "gedit-sys"
path = "./gedit-sys"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core" # all gtk-rs sys crates are in the sys repository

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gtk_source]
package = "sourceview4"
git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs"

[dependencies.gtk_source-sys]
package = "sourceview4-sys"
git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs"
