[package]
name = "gedit-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.gedit]
name = "gedit"
version = "41"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gedit_sys"

[dependencies]
libc = "0.2"

[dependencies.gdk]
package = "gdk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk]
package = "gtk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gtk_source]
package = "sourceview4-sys"
git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["gdk/dox", "gio/dox", "glib/dox", "gobject/dox", "gtk/dox", "gtk_source/dox"]
